app/(pages)/community-partners/page.module.scss
@use "@/app/(pages)/_globals/mixins.scss";

.titleText {
   text-align: center;
}    

.subtitleText {
   text-align: center;
}

.partnersGrid {
  padding: var(--card-padding);
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: var(--vertical-card-gap);
}

.partnerContainer {
  display: flex;
  align-items: center;
}

.partnersCard {
   background-color: var(--white);
   border-radius: 0 var(--card-border-radius) var(--card-border-radius) 0;
   width: 606px;
   height: 452px;
   padding: var(--card-padding);
   text-align: left;
   box-shadow: var(--drop-shadow);
   display: flex;
   flex-direction: column;
   gap: 36px
}

.cardContainer {
   display: flex;
   align-items: center;
}

.imageWrapper {
   position: relative;
   overflow: hidden;
   width: 434px;
   height: 452px;
   border-radius: var(--card-border-radius) 0 0 var(--card-border-radius);
 }

.reverse {
   flex-direction: row-reverse; /* Image on the left */
}

.reverse .imageWrapper {
   border-radius: 0 var(--card-border-radius) var(--card-border-radius) 0;
 } 
 
 .reverse .partnersCard {
   border-radius: var(--card-border-radius) 0 0 var(--card-border-radius);
 } 

 .locationText {
   display: flex;
   align-items: center;
 }
 
 .dateText {
   display: flex;
   align-items: center;
 }
 
 .appointmentText {
   display: flex;
   align-items: center;
 }

.icon {
   width: 20px;
   height: 20px;
   margin-right: 13px;
   color: var(--emerald)
 }
 
 .contactInfo {
     display: flex;
     flex-direction: column;
     gap: 12px;
 }

